--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "method-override": "^3.0.0",
